chore: remove unnecessary formatting and renaming diffs
Signed-off-by: Joris Mancini <joris.mancini_externe@rte-france.com>